Implement complete profile page show/update
