# Modules/Profile/app/Http/Requests/ProfileRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace Modules\Profile\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ProfileRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'nullable|string|max:255',
+            'username' => 'nullable|unique:users|string|max:255',
+            'email' => 'nullable|email|unique:users',
+            'phone' => 'nullable|string|max:11|unique:users',
+            'image' => 'nullable|image|mimes:jpeg,png,jpg,gif,svg|max:2048',
+        ];
+    }
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+}
