# Modules/Profile/app/Transformers/ProfileResource.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace Modules\Profile\Transformers;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ProfileResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'name' => $this->name,
+            'email' => $this->email,
+            'username' => $this->username,
+            'phone' => $this->phone,
+            'photo' => $this->profile_photo,
+        ];
+    }
+}
