# Modules/Profile/routes/web.php
@@ -1,0 +1,8 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+use Modules\Profile\Http\Controllers\ProfileController;
+
+// Route::middleware('jwt.auth')->group(function () {
+//    Route::get('profile', [ProfileController::class, 'index'])->name('profile.index');
+// });
